Deflake ImageWriterUtilityClient browsertest and clients

The image writer browser tests WriteCancel and VerifyCancel added on
crrev.com/449296 flaked on the Windows DEBUG bots, issue 690717.

Re-enable these browser tests. Move all work to the FILE thread both
in the callers (operation.cc, operation_nonchromeos.cc) of the image
writer interface, and in the browser test (to match caller behavior)
to see if this removes the flake on the Windows DEBUG bots (analysis
per crbug.com/690717#c2 suggests that it should).

The browsertest can't test the low-level USB driver code on any port
since our bots don't have USB sticks. So I manually tested using the
the ChromeOS Recovery Tool [1], and I was able to write and verify a
ChromeOS image to my USB stick using this patch on Windows 10.

Covered by existing tests:
  image_writer_utility_client_browsertest, image_writer_unittest

[1] http://bit.ly/2jFtsZZ

BUG=690717,352442

Review-Url: https://codereview.chromium.org/2756393002
Cr-Commit-Position: refs/heads/master@{#458965}

Former-commit-id: 54af805eac68ac00ef7a6a9f3ee40fb49894792f